--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,14 @@ header{
     width: 100%;
     min-height: 100vh;
     z-index: 5;
-    display: flex;justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 nav{
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     padding: 20px 20px;
     background-color: #ce8f5b78;
     position: fixed;
@@ -60,12 +62,13 @@ nav{
     justify-content: space-around;
     align-items: center;
     margin: 0 12px;
+    /* background-color: red; */
  
 }
 .nav-links li{
     /* background-color: #e5ad7f69; */
     margin: 0 7px;
-    padding: 5px 12px;
+    padding: 10px 12px;
     font-size: 1rem;
     font-weight: 400;
     color: #fff;
@@ -79,10 +82,11 @@ nav{
 .nav-links li a{
     color: #fff;
 }
-span{
+.searchBar{
 /* background-color: greenyellow;  */
    position: relative;
-   padding: 5px 30px;
+   padding: 5px 35px;
+   display: flex;
    align-items: center;
   
 }
@@ -91,11 +95,12 @@ input[type="search"]{
     border-radius: 5px;
     border: none;
     outline-color: #ce8f5b99;
+    align-items: center;
 }
 .searchbar{
     position: absolute;
-    top: 11px;
-    right: 5px;
+    top: 30%;
+    right: 7px;
 }
 .home_card{
     /* background-color: orange; */
@@ -462,6 +467,80 @@ padding: 20px 0;
     background-size: cover;
     background-position: 50% 50%;
     background-attachment: fixed;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.member-container{
+    width: 100%;
+    min-height: 100%;
+    /* background-color: greenyellow; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.member-container form{
+    /* background-color: orange; */
+    width: 500px;
+    padding: 25px 20px;
+backdrop-filter: blur(3px);
+    border-radius: 7px;
+    border: 1px solid grey;
+    box-shadow: inset 0 0 3px 2px #fff;
+}
+.member-container form p,h1{
+    padding: 10px 0;
+    text-align: center;
+    color: #DFA381;
+}
+.member-container form div{
+    margin: 10px 0;
+}
+.member-container label,input{
+    display: block;
+    padding: 2px 0;
+
+    font-size: 1rem;
+}
+input{
+    width: 100%;
+    padding: 15px 10px ;
+    border-radius: 5px;
+    border: none;
+    outline-color: #ce8f5b99;
+    background-color: #ffffff63;
+}
+input::placeholder{
+    color: #ffddca;
+}
+.user_name_span{
+display: block;
+    position: relative;
+    /* background-color: plum; */
+    padding: 10px 17px 10px 17px;
+    cursor: pointer;
+}
+.user-name{
+    position: absolute;
+    right: 30px;
+    top: 50%;
+}
+.submit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: olive; */
+    padding-top: 30px ;
+}
+input[type="submit"]{
+    width: fit-content;
+    padding: 10px 50px;
+    background-color:#d53b37cf;
+    color: #fff;
+    font-size: 1.2rem;
+    cursor: pointer;
 }
 /* movie card  */
 .movie_cards {
